Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: dev
  labels: 
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: myapp
  template:
    metadata:
      labels: 
        app: myapp
    spec:
      containers:
        - name: cont3
          image: nginx
          ports:
          - containerPort: 80
          volumeMounts:
          -  mountPath: var/www/html
             name: my-volume
      volumes:
          - name: my-volume
            persistentVolumeClaim:
              claimName: my-pvc
