StatefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: my-statefulset
  namespace: dev
  labels:
    app: mysql-state
spec:
  serviceName: my-statefulset-svc
  replicas: 3
  selector:
    matchLabels:
      app: mysql-state
  template:
    metadata:
      labels:
        app: mysql-state
    spec:
      containers:
        - name: cont1
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: my-volume
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: my-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
