service.yml
kind: Service
apiVersion: v1
metadata:
  name: notes-svc
  namespace: dev
  labels:
    app: myapp
spec:
  selector:
      app: myapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP   

~
